fix: removed header overflow

--- a/styles/header.css
+++ b/styles/header.css
@@ -11,7 +11,7 @@ header {
   backdrop-filter: blur(3px);
   -webkit-backdrop-filter: blur(20px);
   top: 0;
-  width: calc(100% - 6rem);
+  width: calc(100% - 10rem);
   padding: 1.5rem 5rem 1rem 5rem;
   margin-bottom: 2rem;
   display: flex;
